--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>Sternenhimmel Neuer Tab</title>
+  <title>Sternenhimmel Startseite</title>
   <style>
     html, body {
       margin: 0;
       padding: 0;
-      background: #000000;
+      background: #000;
       overflow: hidden;
       height: 100%;
       width: 100%;
+      font-family: sans-serif;
+      color: white;
     }
 
     .star {
@@ -43,9 +45,76 @@
       0%, 100% { opacity: 0.2; transform: scale(1); }
       50% { opacity: 0.7; transform: scale(1.5); }
     }
+
+    .content {
+      position: relative;
+      z-index: 1;
+      text-align: center;
+      top: 20%;
+    }
+
+    .search-box {
+      margin-bottom: 30px;
+    }
+
+    input[type="text"] {
+      padding: 10px;
+      font-size: 18px;
+      border: none;
+      border-radius: 5px;
+      width: 300px;
+      max-width: 80%;
+    }
+
+    .icons {
+      display: flex;
+      justify-content: center;
+      gap: 25px;
+      flex-wrap: wrap;
+    }
+
+    .icon-link {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-decoration: none;
+      color: white;
+    }
+
+    .icon-link img {
+      width: 48px;
+      height: 48px;
+      margin-bottom: 5px;
+    }
   </style>
 </head>
 <body>
+  <div class="content">
+    <div class="search-box">
+      <form action="https://duckduckgo.com/" method="get">
+        <input type="text" name="q" placeholder="DuckDuckGo-Suche...">
+      </form>
+    </div>
+    <div class="icons">
+      <a class="icon-link" href="https://www.youtube.com" target="_blank">
+        <img src="https://www.svgrepo.com/show/349478/youtube.svg" alt="YouTube">
+        YouTube
+      </a>
+      <a class="icon-link" href="https://www.google.com/maps" target="_blank">
+        <img src="https://www.svgrepo.com/show/303206/google-maps.svg" alt="Maps">
+        Maps
+      </a>
+      <a class="icon-link" href="https://chat.openai.com" target="_blank">
+        <img src="https://www.svgrepo.com/show/508784/chatgpt.svg" alt="ChatGPT">
+        ChatGPT
+      </a>
+      <a class="icon-link" href="http://192.168.2.6:8123" target="_blank">
+        <img src="https://www.svgrepo.com/show/473754/home-assistant.svg" alt="Home Assistant">
+        Home Assistant
+      </a>
+    </div>
+  </div>
+
   <script>
     const count = 200; // Anzahl der Sterne
     for (let i = 0; i < count; i++) {
