--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <style>
     html, body {
       margin: 0;
-      padding: 0;
+      padding: 0; 
       background: #000;
       overflow: hidden;
       height: 100%;
@@ -36,8 +36,8 @@
       height: 4px;
       background: white;
       border-radius: 50%;
-      filter: blur(2px);
-      opacity: 0.5;
+      filter: blur(5px);
+      opacity: 0.2;
       animation: slowtwinkle 6s infinite ease-in-out;
     }
 
@@ -97,7 +97,7 @@
     </div>
     <div class="icons">
       <a class="icon-link" href="https://www.youtube.com" target="_blank">
-        <img src="https://www.svgrepo.com/show/349478/youtube.svg" alt="YouTube">
+        <img src="" alt="YouTube">
         YouTube
       </a>
       <a class="icon-link" href="https://www.google.com/maps" target="_blank">
@@ -109,14 +109,14 @@
         ChatGPT
       </a>
       <a class="icon-link" href="http://192.168.2.6:8123" target="_blank">
-        <img src="https://www.svgrepo.com/show/473754/home-assistant.svg" alt="Home Assistant">
+        <img src="has.svg" alt="Home Assistant">
         Home Assistant
       </a>
     </div>
   </div>
 
   <script>
-    const count = 200; // Anzahl der Sterne
+    const count = 100; // Anzahl der Sterne
     for (let i = 0; i < count; i++) {
       const star = document.createElement("div");
       star.classList.add(Math.random() > 0.8 ? "glow" : "star");
