--- a/index.html
+++ b/index.html
@@ -1,1 +1,236 @@
-<style>
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8">
+  <title>Sternenhimmel Parallax</title>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      background: #000;
+      overflow: hidden;
+      height: 100%;
+      width: 100%;
+      font-family: sans-serif;
+      color: white;
+    }
+
+    .parallax-layer {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      pointer-events: none;
+      transform: translateZ(0);
+      transition: transform 0.2s ease-out;
+    }
+
+    .star {
+      position: absolute;
+      width: 2px;
+      height: 2px;
+      background: white;
+      border-radius: 50%;
+      opacity: 0;
+      animation: twinkle 2s infinite ease-in-out;
+    }
+
+    .glow {
+      position: absolute;
+      width: 4px;
+      height: 4px;
+      background: white;
+      border-radius: 50%;
+      filter: blur(2px);
+      opacity: 0.5;
+      animation: slowtwinkle 6s infinite ease-in-out;
+    }
+
+    .shooting-star {
+      position: absolute;
+      width: 2px;
+      height: 2px;
+      background: white;
+      opacity: 0.8;
+      box-shadow: 0 0 6px 2px white;
+      animation: shooting 1.2s linear forwards;
+    }
+
+    .shooting-star::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: -100px;
+      width: 100px;
+      height: 2px;
+      background: linear-gradient(to right, white, transparent);
+      opacity: 0.4;
+      pointer-events: none;
+    }
+
+    @keyframes shooting {
+      0% {
+        opacity: 0;
+        transform: translate(0, 0) scale(1);
+      }
+      10% {
+        opacity: 1;
+      }
+      100% {
+        opacity: 0;
+        transform: translate(-600px, 300px) scale(1.5);
+      }
+    }
+
+    @keyframes twinkle {
+      0%, 100% { opacity: 0.1; transform: scale(0.8); }
+      50% { opacity: 1; transform: scale(1.4); }
+    }
+
+    @keyframes slowtwinkle {
+      0%, 100% { opacity: 0.2; transform: scale(1); }
+      50% { opacity: 0.7; transform: scale(1.5); }
+    }
+
+    .content {
+      position: relative;
+      z-index: 2;
+      text-align: center;
+      top: 20%;
+    }
+
+    .search-box {
+      margin-bottom: 30px;
+      backdrop-filter: blur(12px);
+      background-color: rgba(30, 30, 30, 0.6);
+      padding: 15px;
+      border-radius: 12px;
+      display: inline-block;
+    }
+
+    input[type="text"] {
+      padding: 10px;
+      font-size: 18px;
+      border: none;
+      border-radius: 5px;
+      width: 300px;
+      max-width: 80%;
+      background-color: rgba(255, 255, 255, 0.1);
+      color: white;
+      backdrop-filter: blur(6px);
+    }
+
+    input[type="text"]::placeholder {
+      color: #ccc;
+    }
+
+    .icons {
+      display: flex;
+      justify-content: center;
+      gap: 25px;
+      flex-wrap: wrap;
+    }
+
+    .icon-link {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-decoration: none;
+      color: white;
+      transition: transform 0.2s ease;
+    }
+
+    .icon-link:hover {
+      transform: scale(1.1);
+    }
+
+    .icon-link img {
+      width: 48px;
+      height: 48px;
+      margin-bottom: 5px;
+    }
+  </style>
+</head>
+<body>
+  <div id="parallax1" class="parallax-layer"></div>
+  <div id="parallax2" class="parallax-layer"></div>
+  <div id="shooting-layer" class="parallax-layer"></div>
+
+  <div class="content">
+    <div class="search-box">
+      <form action="https://duckduckgo.com/" method="get">
+        <input type="text" name="q" placeholder="DuckDuckGo-Suche...">
+      </form>
+    </div>
+    <div class="icons">
+      <a class="icon-link" href="https://www.youtube.com" target="_blank">
+        <img src="https://www.svgrepo.com/show/349478/youtube.svg" alt="YouTube">
+        YouTube
+      </a>
+      <a class="icon-link" href="https://www.google.com/maps" target="_blank">
+        <img src="https://www.svgrepo.com/show/303206/google-maps.svg" alt="Maps">
+        Maps
+      </a>
+      <a class="icon-link" href="https://chat.openai.com" target="_blank">
+        <img src="https://www.svgrepo.com/show/508784/chatgpt.svg" alt="ChatGPT">
+        ChatGPT
+      </a>
+      <a class="icon-link" href="http://192.168.2.6:8123" target="_blank">
+        <img src="https://www.svgrepo.com/show/473754/home-assistant.svg" alt="Home Assistant">
+        Home Assistant
+      </a>
+    </div>
+  </div>
+
+  <script>
+    function createStars(layer, count, className) {
+      for (let i = 0; i < count; i++) {
+        const star = document.createElement("div");
+        star.classList.add(className);
+        star.style.top = `${Math.random() * 100}vh`;
+        star.style.left = `${Math.random() * 100}vw`;
+        star.style.animationDelay = `${Math.random() * 4}s`;
+        layer.appendChild(star);
+      }
+    }
+
+    const layer1 = document.getElementById("parallax1");
+    const layer2 = document.getElementById("parallax2");
+    const shootingLayer = document.getElementById("shooting-layer");
+
+    createStars(layer1, 100, "star");
+    createStars(layer2, 50, "glow");
+
+    let targetX = 0, targetY = 0;
+
+    document.addEventListener("mousemove", (e) => {
+      targetX = (e.clientX / window.innerWidth - 0.5) * 2;
+      targetY = (e.clientY / window.innerHeight - 0.5) * 2;
+    });
+
+    function animateParallax() {
+      layer1.style.transform = `translate(${targetX * 5}px, ${targetY * 5}px)`;
+      layer2.style.transform = `translate(${targetX * 10}px, ${targetY * 10}px)`;
+      requestAnimationFrame(animateParallax);
+    }
+
+    animateParallax();
+
+    function spawnShootingStar() {
+      const star = document.createElement("div");
+      star.classList.add("shooting-star");
+      star.style.top = `${Math.random() * 30 + 5}vh`;
+      star.style.left = `${Math.random() * 100}vw`;
+      shootingLayer.appendChild(star);
+
+      setTimeout(() => star.remove(), 1500);
+
+      const nextTime = Math.random() * 10000 + 5000;
+      setTimeout(spawnShootingStar, nextTime);
+    }
+
+    setTimeout(spawnShootingStar, 5000);
+  </script>
+</body>
+</html>
