--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       left: 0;
       pointer-events: none;
       transform: translateZ(0);
-      transition: transform 0.2s ease-out;
+      transition: transform 0.5s ease-out;
     }
 
     .star {
@@ -33,18 +33,18 @@
       background: white;
       border-radius: 50%;
       opacity: 0;
-      animation: twinkle 2s infinite ease-in-out;
+      animation: twinkle 8s infinite ease-in-out;
     }
 
     .glow {
       position: absolute;
-      width: 4px;
-      height: 4px;
-      background: white;
+      width: 5px;
+      height: 5px;
+      background: white red blueviolet;
       border-radius: 50%;
       filter: blur(2px);
       opacity: 0.5;
-      animation: slowtwinkle 6s infinite ease-in-out;
+      animation: slowtwinkle 12s infinite ease-in-out;
     }
 
     .shooting-star {
@@ -54,19 +54,7 @@
       background: white;
       opacity: 0.8;
       box-shadow: 0 0 6px 2px white;
-      animation: shooting 1.2s linear forwards;
-    }
-
-    .shooting-star::after {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: -100px;
-      width: 100px;
-      height: 2px;
-      background: linear-gradient(to right, white, transparent);
-      opacity: 0.4;
-      pointer-events: none;
+      animation: shooting 0.8s linear forwards;
     }
 
     @keyframes shooting {
@@ -165,7 +153,7 @@
     </div>
     <div class="icons">
       <a class="icon-link" href="https://www.youtube.com" target="_blank">
-        <img src="https://www.svgrepo.com/show/349478/youtube.svg" alt="YouTube">
+        <img src="yt.svg" alt="YouTube">
         YouTube
       </a>
       <a class="icon-link" href="https://www.google.com/maps" target="_blank">
@@ -177,7 +165,7 @@
         ChatGPT
       </a>
       <a class="icon-link" href="http://192.168.2.6:8123" target="_blank">
-        <img src="https://www.svgrepo.com/show/473754/home-assistant.svg" alt="Home Assistant">
+        <img src="has.svg" alt="Home Assistant">
         Home Assistant
       </a>
     </div>
